--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <html lang="en">
     <meta charset="utf-8">
-    <title>DROOM</title>
+    <title>DROOM | About Us</title>
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <!--[if lt IE 9]>
@@ -13,15 +13,15 @@
 
   <body>
 
-    <div class= 'banner'>
+    <div class="about-banner">
 
       <div class='navigation'>
-      <a href='about.html' class='nav'>
+      <a href='index.html' class='nav'>
         <div class='one'></div>
         <div class='two'></div>
         <div class='three'></div>
       </a>
-    </div>
+      </div>
         
         <!-- <a href='#'>Companies</a>
         <a href='#'>About Us</a>
@@ -29,23 +29,7 @@
       </nav>   -->
 
       <header>
-        <h1 class='title'>DROOM</h1>
-        <div class='buttons'>
-          <button class="signup"> <a href='#'>Sign Up</a></button>
-          <button class="login"> <a href='#'>Log In</a></button>
-        </div>
-        <form>
-          <table>
-            <tr>
-              <td>
-                <input type="text" email=''>
-              </td>
-              <td>
-                <button href='#'>Learn More</button>
-              </td>
-            </tr>
-          </table>
-        </form>
+        <h1 class='title-about'>Meet the Team</h1>
       </header>
 
     </div>
@@ -54,26 +38,27 @@
       <section class='job-listings'>
 
         <section class='job-cards'>
-            <img src='../images/job-cards.png'>
+            <img class="teamphotos" src='../images/default-user.png'>
           <div class='text-box'>
-              <h2>Your next career</h2>
+              <h2>Designers</h2>
               <p>Must go faster. Must go faster. My dad once told me, laugh and the world laughs with you, Cry, and I'll give you something to cry about you little bastard! Jaguar shark! So tell me - does it really exist? I was part of something special. You know what? It is beets. I've crashed into a beet truck.</p> 
           </div>
         </section>
-      <div class= 'job-card2'>
+
         <section class='job-cards'>
+            <img class="teamphotos" src='../images/default-user.png'>
             <div class='text-box'>
-                <h2>Swipe like you mean it</h2>
+                <h2>API</h2>
                 <p>Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists. Checkmate... Yes, Yes, without the oops! Eventually, you do plan to have dinosaurs on your dinosaur tour, right? You really think you can fly that thing?</p> 
             </div>
-            <img src='../images/job-cards.png'>
+
+ 
         </section>
-      </div>
 
         <section class= 'job-cards'>
-            <img src='../images/job-cards.png'>
+            <img class="teamphotos" src='../images/default-user.png'>
             <div class='text-box'>
-                <h2>Start looking today</h2>
+                <h2>Developers</h2>
                 <p>Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should. God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. I was part of something special.</p> 
             </div>
         </section>
