--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <header>
         <h1 class='title'>DROOM</h1>
         <div class='buttons'>
-          <button class="signup"> <a href='#'>Sign Up</a></button>
+          <button class="signup"> <a href='https://droombwpt.netlify.com/'>Sign Up</a></button>
           <button class="login"> <a href='#'>Log In</a></button>
         </div>
         <form>
