new-styling-and-menu && git push

--- a/about.html
+++ b/about.html
@@ -15,18 +15,21 @@
 
     <div class="about-banner">
 
-      <div class='navigation'>
-      <a href='index.html' class='nav'>
-        <div class='one'></div>
-        <div class='two'></div>
-        <div class='three'></div>
-      </a>
-      </div>
-        
-        <!-- <a href='#'>Companies</a>
-        <a href='#'>About Us</a>
-        <a href='#'>Contact Us</a>
-      </nav>   -->
+        <div class='navigation' id='navigation'>
+            <a href='#'>
+              <div class='one'></div>
+              <div class='two'></div>
+              <div class='three'></div>
+            </a>
+          </div>
+      
+          <div class='menu hide-menu show-menu' id='show-menu' >
+            <li id='exit'><img src='../images/exit (1).svg'></li>
+            <li><a href='index.html'>Home</a></li>
+            <li><a  class='active' href='about.html'>About Us</a></li>
+            <li><a href='#'>Partnerships</a></li>
+            <li><a href='#'>Contact</a></li>
+          </div>
 
       <header>
         <h1 class='title-about'>Meet the Team</h1>
