menu-changes-and-content-created

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <div class="about-banner">
 
         <div class='navigation' id='navigation'>
-            <a href='#'>
+            <a href='about-menu.html'>
               <div class='one'></div>
               <div class='two'></div>
               <div class='three'></div>
@@ -84,7 +84,4 @@
     </section> 
 
   </body>
-
-  <script src='http://code.jquery.com/jquery-1.11.3.min.js'></script>
-  <script src='menu.js'></script>
 </html>
