--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class= 'banner'>
 
     <div class='navigation' id='navigation'>
-      <a href='#'>
+      <a href='index-menu.html'>
         <div class='one'></div>
         <div class='two'></div>
         <div class='three'></div>
@@ -60,14 +60,14 @@
             <img src='../images/job-cards.png'>
           <div class='text-box'>
               <h2>Your next career</h2>
-              <p>Must go faster. Must go faster. My dad once told me, laugh and the world laughs with you, Cry, and I'll give you something to cry about you little bastard! Jaguar shark! So tell me - does it really exist? I was part of something special. You know what? It is beets. I've crashed into a beet truck.</p> 
+              <p>Welcome to the future of Job Searching. Easily swipe through jobs listings specially filtered to your skills and requirements. Want to work remotely? Looking for certain benefits? This is the magic of Droom.</p> 
           </div>
         </section>
       <div class= 'job-card2'>
         <section class='job-cards'>
             <div class='text-box'>
                 <h2>Swipe like you mean it</h2>
-                <p>Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists. Checkmate... Yes, Yes, without the oops! Eventually, you do plan to have dinosaurs on your dinosaur tour, right? You really think you can fly that thing?</p> 
+                <p>It's easy for employers too! If you're a business owner looking for your next hire, look no further. Sorting through resumes has never been easier.</p> 
             </div>
             <img src='../images/job-cards.png'>
         </section>
@@ -77,7 +77,7 @@
             <img src='../images/job-cards.png'>
             <div class='text-box'>
                 <h2>Start looking today</h2>
-                <p>Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should. God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. I was part of something special.</p> 
+                <p>Droom's mission is to match employers and job seekers with their perfect counterpart. Our belief is that there is a Dream Job for everyone and we seek to put in in arms reach.</p> 
             </div>
         </section>
 
@@ -85,6 +85,13 @@
     </div>
 
     <section class='footer'>
+
+      <div class='social'>
+       <a href='facebook.com'><img src='images/facebook-icon.png'></a> 
+       <a href='instagram.com'><img src='images/instagram-icon.png'></a> 
+       <a href='twitter.com'><img src='images/twitter-icon.png'></a> 
+       <a href='linkedin.com'><img src='images/linkedin-icon.png'></a>
+      </div>
       <p>
         Copyright © 2019
         <br>
@@ -99,23 +106,4 @@
     </section> 
 
   </body>
-
-  <script>
-    let burger = document.getElementById('navigation');
-    let menu = document.getElementbyId('show-menu');
-    let exit = document.getElementById('exit');
-
-    burger.addEventListener('click', function(x) {
-      menu.classList.toggle('show-menu');
-      x.preventDefault();
-    });
-
-    exit.addEventListener('click', function(x) {
-      burger.classList.toggle('hide-menu');
-      x.preventDefault();
-    })
-  </script>
-
-  <script src='http://code.jquery.com/jquery-1.11.3.min.js'></script>
-  <script src='menu.js'></script>
 </html>
