--- a/about.html
+++ b/about.html
@@ -26,6 +26,8 @@
           <div class='menu hide-menu show-menu' id='show-menu' >
             <li id='exit'><img src='../images/exit (1).svg'></li>
             <li><a href='index.html'>Home</a></li>
+            <li><a href='droombwpt.netlify.com/login'>Log In</a></li>
+            <li><a href='droombwpt.netlify.com/'>Sign Up</a></li>
             <li><a  class='active' href='about.html'>About Us</a></li>
             <li><a href='#'>Partnerships</a></li>
             <li><a href='#'>Contact</a></li>
