--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     </div>
 
     <div class='menu hide-menu show-menu' id='show-menu' >
-      <li id='exit'><img src='../images/exit (1).svg'></li>
+      <li id='exit'><a href='index.html'><img src='../images/exit (1).svg'></a></li>
       <li><a class='active' href='index.html'>Home</a></li>
+      <li><a href='droombwpt.netlify.com/login'>Log In</a></li>
+      <li><a href='droombwpt.netlify.com/'>Sign Up</a></li>
       <li><a href='about.html'>About Us</a></li>
       <li><a href='#'>Partnerships</a></li>
       <li><a href='#'>Contact</a></li>
@@ -35,7 +37,7 @@
         <h1 class='title'>DROOM</h1>
         <div class='buttons'>
           <button class="signup"> <a href='https://droombwpt.netlify.com/'>Sign Up</a></button>
-          <button class="login"> <a href='#'>Log In</a></button>
+          <button class="login"> <a href='https://droombwpt.netlify.com/login'>Log In</a></button>
         </div>
         <form>
           <table>
