--- a/index-menu.html
+++ b/index-menu.html
@@ -24,18 +24,20 @@
     </div>
 
     <div class='menu show-menu' id='show-menu' >
-      <li id='exit'><a href='index.html'><img src='../images/exit (1).svg'></a></li>
-      <li><a class='active' href='index.html'>Home</a></li>
-      <li><a href='about.html'>About Us</a></li>
-      <li><a href='#'>Partnerships</a></li>
-      <li><a href='#'>Contact</a></li>
-    </div>
+        <li id='exit'><a href='index.html'><img src='../images/exit (1).svg'></a></li>
+        <li><a class='active' href='index.html'>Home</a></li>
+        <li><a href='https://droombwpt.netlify.com/login'>Log In</a></li>
+        <li><a href='http://droombwpt.netlify.com/'>Sign Up</a></li>
+        <li><a  href='about.html'>About Us</a></li>
+        <li><a href='#'>Partnerships</a></li>
+        <li><a href='#'>Contact</a></li>
+      </div>
 
       <header>
         <h1 class='title'>DROOM</h1>
         <div class='buttons'>
           <button class="signup"> <a href='https://droombwpt.netlify.com/'>Sign Up</a></button>
-          <button class="login"> <a href='#'>Log In</a></button>
+          <button class="login"> <a href='https://droombwpt.netlify.com/login'>Log In</a></button>
         </div>
         <form>
           <table>
