--- a/about.html
+++ b/about.html
@@ -55,7 +55,12 @@
             <p>I am a highly motivated and aspiring web developer from Sarasota, FL. I am currently enrolled in Lambda School for Full Stack Web Development. I have been coding and programming as a hobby for about 3 years and enjoyed it so much I decided to make it a career. I have a passion for creating functional modern applications that look original.</p> 
         </div>
       </section>
-
+      <section class='job-cards'>
+        <div class='text-box'>
+            <a  target='_blank' href='https://www.linkedin.com/in/andrew-ogle/'><h2>Andrew Ogle | React Developer</h2></a>
+            <p>Skilled in React.js, Redux, Nodejs, Express, Cascading Style Sheets (CSS), HTML, JavaScript, LESS, and Web Development. Strong operations professional with a Certificate focused in Full Stack Web Development from Lambda School. </p> 
+        </div>
+      </section>
       <section class='job-cards'>
           <div class='text-box'>
               <a  target='_blank' href='https://www.elvisjg.com'><h2>Elvis Gonzalez | Backend & Git Concierge</h2></a>
